2013-07-28 Riccardo Mottola <rm@gnu.org>

	* fileTable.h
	* fileTable.m
	File path setter.

2013-07-27 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* fileTable.m
        Make copy of selection before file transfer. Update table after store and retrieve.

2013-07-14 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* Resources/FTP.gorm
	Remote/Local refresh

2013-07-12 Riccardo Mottola <rm@gnu.org>

	* AppController.h (readDirWith)
	* AppController.m
	Factor out code for reading directory contents into table and view.

2013-07-11 Riccardo Mottola <rm@gnu.org>

	* AppController.m (localDelete, remoteDelete)
	Make a copy of selection before performing deletion.

2013-07-11 Riccardo Mottola <rm@gnu.org>

	* fileTable.[h,m]
	Improve object remove methods regarding sorting array sync, factor sortedArray generation out.

2013-07-09 Riccardo Mottola <rm@gnu.org>

	* fileTable.[h,m]
	Object add and remove methods.

2013-06-27 Riccardo Mottola <rm@gnu.org>

	* GetNameController.h
	* GetNameController.m
        Handle return also in case of window closure through window button.

2013-06-11 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Actually create a new folder, local and remote.

2013-06-11 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	* ftpclient.h
	* AppController.m
	* AppController.h
	Change most method parameters from char* to NSString*.

2013-06-10 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Implement FTP rename RNFR RNTO

2013-06-09 Riccardo Mottola <rm@gnu.org>

	* GetNameController.h
	* GetNameController.m
	* AppController.m
        Rename setDescription to setMessage to avoid method clash

2013-06-07 Riccardo Mottola <rm@gnu.org>

	* GetNameController.m
	Load interface in init, not runAsModal

	* AppController.m
	Actually delete the file!

	* localclient.m
	Do not use working dir, but absolute path in the file element.

2013-06-07 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m